# tcc_rs

./: README.md  requirements.txt  setup.cfg  setup.py
docs/examples/: document3.json  document5.json  document51.json  document6.json  document6_2.json  document7.json  document7_2.json
restful_api/snw/api/: views.py
restful_api/snw/api/resources/: __init__.py  linked_paper.py
restful_api/tests/: test_linked_paper.py
rs/: app.py  configuration.py  exceptions.py  rs.py
rs/core/: connections.py  controller.py  controller_.py  paper_controller.py  papers.py  papers_selection.py  reception.py  recommender.py  semantic_search.py  semantics.py  tasks.py
rs/db/: data_models.py  db.py
rs/models/: db.py  document.py  journal.py  models.py
rs/poc/: poc.py
rs/tools/: migration_from_isis.py  reports.py
rs/utils/: files_utils.py  json2doc.py  messages.py  pre_processing.py  response_utils.py  sentences_transformations.py
tests/fixtures/: document1.json  document2.json  document3.json  document4.json
xlingual_papers_recommender/: app.py  configuration.py  exceptions.py
xlingual_papers_recommender/core/: connections.py  controller.py  papers.py  recommender.py  semantics.py  tasks.py
xlingual_papers_recommender/db/: data_models.py  db.py
xlingual_papers_recommender/tools/: registration.py  reports.py  reports_doi.py
xlingual_papers_recommender/tools/csv_inputs/: csv_inputs_controller.py  csv_inputs_exceptions.py  csv_inputs_models.py  csv_inputs_view.py  csv_merger.py  tasks.py
xlingual_papers_recommender/utils/: files_utils.py  response_utils.py
