[metadata]
name = xlingual_papers_recommender
version = 0.1
author = Roberta Takenaka
author_email = roberta.takenaka@scielo.org
description = Component of Papers recommender system in cross-lingual and multidisciplinary scope
long_description = file: README.md
long_description_content_type = text/markdown
keywords = natural language processing, citation network, semantic similarity, machine learning, classification models
license = BSD 3-Clause License
url = https://github.com/robertatakenaka/tcc_rs
project_urls =
    Bug Tracker = https://github.com/github.com/robertatakenaka/tcc_rs/issues
classifiers =
	Programming Language :: Python :: 3.7",
	Programming Language :: Python :: 3.8",
	Programming Language :: Python :: 3.9",
	Programming Language :: Python :: 3 :: Only",

[options]
package_dir =
    = xlingual_papers_recommender
packages = find:
python_requires = >=3.6
install_requires =
	sentence-transformers
    celery
    mongoengine

[options.packages.find]
where = xlingual_papers_recommender
exclude =
    tests*

[options.entry_points]
console_scripts =
    xlingual_papers_recommender = xlingual_papers_recommender.app:main
    xlingual_papers_recommender_ds_loader = xlingual_papers_recommender.tools.csv_inputs.csv_inputs_view:main
    xlingual_papers_recommender_reports = xlingual_papers_recommender.tools.reports:main
